--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
   "rust-analyzer.linkedProjects": [
-    "./02/hello/Cargo.toml"
+    "./02/hello/Cargo.toml",
+    "./02/rpn/Cargo.toml"
+
   ],
 }
