--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "rust-analyzer.linkedProjects": [
     "./02/hello/Cargo.toml",
     "./02/rpn/Cargo.toml",
-    "./03/bitonic-sorter/Cargo.toml"
+    "./03/bitonic-sorter/Cargo.toml",
+    "./06/leap-year/Cargo.toml"
   ],
 }
