--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "./02/rpn/Cargo.toml",
     "./03/bitonic-sorter/Cargo.toml",
     "./06/leap-year/Cargo.toml",
-    "./07/ex07/Cargo.toml"
+    "./07/ex07/Cargo.toml",
+    "./07/toy-vec/Cargo.toml"
   ],
 }
